--- a/login.html
+++ b/login.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello html nodejs world</title>
+    <title>Login Page</title>
 </head>
 <body>
-    <h1>Now using html</h1>
+    <h1>The Login Page</h1>
 </body>
 </html>
